--- a/scss/main.css
+++ b/scss/main.css
@@ -78,6 +78,27 @@ h4 {
   line-height: 4rem;
 }
 
+.container {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 57.3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 111rem;
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
 .button {
   display: flex;
   flex-direction: row;
@@ -189,6 +210,227 @@ h4 {
 @media (min-width: 768px) {
   .footer .button {
     position: absolute;
-    right: -15.6rem;
+    right: -12.6rem;
+  }
+}
+
+.portfolio__card {
+  position: relative;
+}
+.portfolio__card:hover {
+  cursor: pointer;
+}
+.portfolio__card:hover .overlay {
+  background: rgba(255, 255, 255, 0.503415);
+}
+.portfolio__card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 0.01%, rgba(0, 0, 0, 0.499044) 100%);
+  padding: 23px 24px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+.portfolio__card .overlay__date {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  opacity: 0.75;
+}
+
+.header {
+  position: relative;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+}
+@media (min-width: 768px) {
+  .header__logo {
+    margin-right: 7.9rem;
+  }
+}
+@media (min-width: 1200px) {
+  .header__logo {
+    margin-right: 9.5rem;
+  }
+}
+.header__logo svg {
+  width: 7.7rem;
+  height: auto;
+}
+@media (min-width: 768px) {
+  .header__logo svg {
+    width: 9.6rem;
+  }
+}
+.header__logo path {
+  fill: #1b1d23;
+}
+.header__nav {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  position: relative;
+  align-items: center;
+  z-index: 30;
+  padding: 3.2rem;
+}
+@media (min-width: 768px) {
+  .header__nav {
+    padding: 5.6rem 0;
+  }
+}
+.header__route {
+  display: none;
+}
+@media (min-width: 768px) {
+  .header__route {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: 1.8rem;
+    color: #c8ccd8;
+    position: absolute;
+    top: 0;
+    transform-origin: left bottom;
+    transform: translateY(-100%) translateX(-5.1rem) rotate(90deg);
+  }
+}
+@media (min-width: 1200px) {
+  .header__route {
+    transform: translateY(-100%) translateX(-9.4rem) rotate(90deg);
+  }
+}
+.header__route--line {
+  height: 1px;
+  width: 10.4rem;
+  display: block;
+  background-color: #c8ccd8;
+  margin-right: 4.8rem;
+}
+.header__toggle {
+  margin-left: auto;
+}
+.header__toggle:hover {
+  cursor: pointer;
+}
+.header__toggle > span {
+  display: block;
+  width: 24px;
+  height: 4px;
+  background-color: #1b1d23;
+  transition: all 300ms ease-in-out;
+  transform-origin: 1px 2px;
+}
+.header__toggle > span:not(:last-child) {
+  margin-bottom: 4px;
+}
+@media screen and (max-width: 768px) {
+  .header.open .header__toggle > span:first-child {
+    transform: rotate(45deg);
+  }
+  .header.open .header__toggle > span:nth-child(2) {
+    opacity: 0;
+  }
+  .header.open .header__toggle > span:last-child {
+    transform: rotate(-45deg);
+  }
+  .header.open .header__menu {
+    display: block;
+    margin-left: 3.2rem;
+  }
+}
+.header__links a {
+  margin-right: 6.1rem;
+  text-decoration: none;
+}
+@media (min-width: 768px) {
+  .header__links a {
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+    color: #7d828f;
+  }
+}
+.header__menu {
+  position: absolute;
+  width: calc(100% - 3.2rem);
+  top: 9.8rem;
+  background-color: #eeeff4;
+  padding: 3.9rem 4.8rem 4.2rem 4.8rem;
+  z-index: 100;
+  display: none;
+}
+.header__menu a {
+  display: block;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 3.2rem;
+  line-height: 4rem;
+  margin-bottom: 1.7rem;
+  color: #1b1d23;
+}
+.header__menu a:last-child {
+  margin-bottom: 0;
+}
+.header.open .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  opacity: 0.5;
+}
+.header.sticky {
+  position: fixed;
+  left: 0;
+  right: 0;
+}
+@media (min-width: 768px) {
+  .header.sticky {
+    position: relative;
+  }
+}
+.header .hide-for-mobile {
+  display: none;
+}
+@media (min-width: 768px) {
+  .header .hide-for-mobile {
+    display: block;
+  }
+}
+@media (min-width: 768px) {
+  .header .hide-for-tablet {
+    display: none;
+  }
+}
+
+.portfolio {
+  padding: 0 3.2rem;
+  align-items: center;
+  margin-bottom: 72px;
+  gap: 2.4rem;
+}
+@media (min-width: 768px) {
+  .portfolio {
+    margin-bottom: 160px;
+    padding: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .portfolio {
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 3.2rem;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
   }
 }/*# sourceMappingURL=main.css.map */
