--- a/scss/pages/_portfolio.scss
+++ b/scss/pages/_portfolio.scss
@@ -1,7 +1,8 @@
 .portfolio {
   padding: 0 3.2rem;
   align-items: center;
-  margin-bottom: 72px;
+  margin-bottom: 7.2rem;
+  margin-top: 5.6rem;
   gap: 2.4rem;
 
   @include size(tablet) {
