--- a/scss/main.css
+++ b/scss/main.css
@@ -28,7 +28,7 @@ h4 {
 }
 
 h1 {
-  visibility: hidden;
+  display: none;
 }
 @media (min-width: 768px) {
   h1 {
@@ -80,12 +80,14 @@ h4 {
 
 .container {
   width: 100%;
+  padding: 0 3.2rem;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 768px) {
   .container {
+    padding: 0;
     width: 57.3rem;
   }
 }
@@ -433,4 +435,65 @@ h4 {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
   }
+}
+
+.about__leaders {
+  display: flex;
+}
+@media (min-width: 1200px) {
+  .about__leaders {
+    flex-direction: row;
+  }
+}
+.about__leaders_title {
+  max-width: 23rem;
+  margin-bottom: 5.5rem;
+}
+.about .leaders {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 11.1rem;
+  row-gap: 7.9rem;
+  max-width: 73rem;
+}
+@media (min-width: 768px) {
+  .about .leaders {
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 10.3rem;
+    -moz-column-gap: 1.1rem;
+         column-gap: 1.1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .about .leaders {
+    margin-left: auto;
+    row-gap: 6.3rem;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+}
+.about .leaders__card:last-child {
+  margin: 0;
+}
+.about .leaders__image {
+  width: 31.1rem;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 768px) {
+  .about .leaders__image {
+    width: 28rem;
+  }
+}
+@media (min-width: 1200px) {
+  .about .leaders__image {
+    width: 35rem;
+  }
+}
+.about .leaders__title {
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  opacity: 0.75;
 }/*# sourceMappingURL=main.css.map */
