--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,4 +9,6 @@
 @import "./sections/footer.scss";
 @import "./sections/_portfolio-card.scss";
 @import "./sections/_header.scss";
+
 @import "./pages/_portfolio.scss";
+@import "./pages/_about.scss";
