--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -12,7 +12,13 @@
 
 @mixin heading__line($top, $top-tablet, $top-desktop) {
   position: relative;
-
+  margin-top: $top;
+  @include size(tablet) {
+    margin-top: $top-tablet;
+  }
+  @include size(desktop) {
+    margin-top: 0;
+  }
   &:before {
     content: "";
     height: 1px;
