--- a/scss/main.css
+++ b/scss/main.css
@@ -32,6 +32,7 @@ h1 {
 }
 @media (min-width: 768px) {
   h1 {
+    display: block;
     font-weight: 700;
     font-size: 12rem;
     line-height: 20rem;
@@ -414,6 +415,129 @@ h4 {
   }
 }
 
+.hero {
+  position: relative;
+}
+@media (min-width: 768px) {
+  .hero {
+    margin: 0 auto;
+    padding: 0;
+    width: 57.3rem;
+    margin-bottom: 20rem;
+  }
+}
+@media (min-width: 1200px) {
+  .hero {
+    width: 111rem;
+  }
+}
+.hero__img {
+  position: relative;
+  z-index: -1;
+}
+.hero__img img {
+  width: 100%;
+}
+@media (min-width: 1200px) {
+  .hero__img img {
+    width: auto;
+  }
+}
+.hero__img .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  opacity: 0.35;
+}
+@media (min-width: 1200px) {
+  .hero__img .overlay {
+    width: 63.5rem;
+  }
+}
+.hero__content {
+  margin-top: -4.5rem;
+  margin-right: 3.2rem;
+  padding: 6.5rem 0 7.6rem 3.2rem;
+  background-color: white;
+  z-index: 2;
+}
+@media (min-width: 768px) {
+  .hero__content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    margin-left: 5.8rem;
+    padding-left: 6rem;
+    padding-top: 8.8rem;
+  }
+}
+@media (min-width: 1200px) {
+  .hero__content {
+    max-width: 62.8rem;
+    margin: 0;
+    padding-left: 18.2rem;
+    padding-top: 21.7em;
+  }
+}
+.hero__header {
+  color: #eeeff4;
+  position: absolute;
+  right: 0;
+  top: -8.8rem;
+}
+.hero__title {
+  margin-bottom: 2.1rem;
+}
+@media (min-width: 768px) {
+  .hero__title {
+    margin-bottom: 3.8rem;
+    position: relative;
+    margin-top: 0;
+  }
+}
+@media (min-width: 768px) and (min-width: 768px) {
+  .hero__title {
+    margin-top: 7.3rem;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .hero__title {
+    margin-top: 0;
+  }
+}
+@media (min-width: 768px) {
+  .hero__title:before {
+    content: "";
+    height: 1px;
+    width: 6.5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #c8ccd8;
+  }
+}
+@media (min-width: 768px) and (min-width: 768px) {
+  .hero__title:before {
+    top: -7.3rem;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .hero__title:before {
+    top: -5.7rem;
+  }
+}
+.hero__text {
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  color: #60636d;
+}
+
 .portfolio {
   padding: 0 3.2rem;
   align-items: center;
@@ -539,6 +663,17 @@ h4 {
   margin-bottom: 2.2rem;
   max-width: 23rem;
   position: relative;
+  margin-top: 6.8rem;
+}
+@media (min-width: 768px) {
+  .about .heritage__header {
+    margin-top: 4.9rem;
+  }
+}
+@media (min-width: 1200px) {
+  .about .heritage__header {
+    margin-top: 0;
+  }
 }
 .about .heritage__header:before {
   content: "";
