--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./sections/footer.scss";
 @import "./sections/_portfolio-card.scss";
 @import "./sections/_header.scss";
+@import "./sections/_hero.scss";
 
 @import "./pages/_portfolio.scss";
 @import "./pages/_about.scss";
