--- a/scss/main.css
+++ b/scss/main.css
@@ -803,4 +803,28 @@ h4 {
     flex-direction: column;
     align-items: flex-start;
   }
+}
+
+.contact__map {
+  width: 100%;
+  margin: 7.1rem 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.contact__map img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .contact__map {
+    margin: 22.6rem auto 20rem auto;
+    padding: 0;
+    width: 57.3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .contact__map {
+    margin: 20rem auto 16rem auto;
+    width: 111rem;
+  }
 }/*# sourceMappingURL=main.css.map */
