--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -52,3 +52,23 @@
     }
   }
 }
+
+.contact__map {
+  width: 100%;
+  margin: 7.1rem 0;
+  padding: 0;
+  img {
+    width: 100%;
+  }
+  display: flex;
+  flex-direction: column;
+  @include size(tablet) {
+    margin: 22.6rem auto 20rem auto;
+    padding: 0;
+    width: 57.3rem;
+  }
+  @include size(desktop) {
+    margin: 20rem auto 16rem auto;
+    width: 111rem;
+  }
+}
