--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,4 @@
 @import "./pages/_portfolio.scss";
 @import "./pages/_about.scss";
 @import "./pages/_contact.scss";
+@import "./pages/_home.scss";
