--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,4 +1,9 @@
 .featured {
+  margin-top: 7.3rem;
+  @include size(tablet) {
+    margin-top: 20rem;
+  }
+
   &__header {
     a {
       display: none;
@@ -39,5 +44,54 @@
       top: 4.5rem;
       right: -1.6rem;
     }
+  }
+}
+
+.ideas {
+  position: relative;
+
+  img {
+    width: 100%;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+  }
+
+  @include size(tablet) {
+    margin: 0 auto;
+    display: flex;
+    width: 57.3rem;
+  }
+  @include size(desktop) {
+    width: 111rem;
+  }
+  &__text {
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 3.2rem;
+    @include size(tablet) {
+      padding-left: 5.8rem;
+    }
+    @include size(desktop) {
+      padding-left: 16.8rem;
+    }
+  }
+  &__title {
+    margin-bottom: 2.3rem;
   }
 }
