--- a/scss/main.css
+++ b/scss/main.css
@@ -937,4 +937,77 @@ h4 {
 }
 .ideas__title {
   margin-bottom: 2.3rem;
+}
+
+.welcome {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-bottom: 11.3rem;
+  margin-top: 10rem;
+}
+@media (min-width: 768px) {
+  .welcome {
+    margin-bottom: 23.3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .welcome {
+    margin-bottom: 20rem;
+  }
+}
+.welcome__welcome {
+  display: none;
+  color: #eeeff4;
+  position: absolute;
+  top: -15rem;
+  left: 0;
+}
+@media (min-width: 768px) {
+  .welcome__welcome {
+    display: block;
+  }
+}
+@media (min-width: 1200px) {
+  .welcome__welcome {
+    top: -7.5rem;
+    left: -3.5rem;
+  }
+}
+.welcome__image {
+  display: none;
+}
+@media (min-width: 1200px) {
+  .welcome__image {
+    display: block;
+  }
+}
+.welcome__text {
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  color: #60636d;
+  margin-bottom: 2.4rem;
+}
+.welcome__text:last-child {
+  margin-bottom: 0;
+}
+.welcome__text_container {
+  z-index: 2;
+}
+@media (min-width: 1200px) {
+  .welcome__text_container {
+    max-width: 48.3rem;
+    margin-right: 12.5rem;
+  }
+}
+.welcome__header {
+  margin-bottom: 2.2rem;
+}
+@media (min-width: 768px) {
+  .welcome__header {
+    margin-bottom: 4.3rem;
+  }
 }/*# sourceMappingURL=main.css.map */
