--- a/scss/main.css
+++ b/scss/main.css
@@ -34,7 +34,7 @@ h1 {
   h1 {
     display: block;
     font-weight: 700;
-    font-size: 12rem;
+    font-size: 15.35rem;
     line-height: 20rem;
     letter-spacing: -0.3rem;
   }
@@ -51,6 +51,7 @@ h2 {
   font-size: 4.8rem;
   line-height: 4.8rem;
   letter-spacing: -0.12rem;
+  font-weight: 700;
 }
 @media (min-width: 768px) {
   h2 {
@@ -1010,4 +1011,110 @@ h4 {
   .welcome__header {
     margin-bottom: 4.3rem;
   }
+}
+
+.carousel {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  color: white;
+}
+@media (min-width: 768px) {
+  .carousel {
+    width: 57.3rem;
+    margin-bottom: 18.9rem;
+  }
+}
+@media (min-width: 1200px) {
+  .carousel {
+    width: 111rem;
+  }
+}
+.carousel__item {
+  font-weight: bold;
+  font-size: 2em;
+  display: none;
+}
+.carousel__item--selected {
+  display: block;
+}
+.carousel__image img {
+  width: 100%;
+}
+.carousel .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  mix-blend-mode: normal;
+  opacity: 0.35;
+}
+.carousel__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 0 3.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.carousel__text h2 {
+  margin-bottom: 1.1rem;
+}
+@media (min-width: 768px) {
+  .carousel__text {
+    padding: 0 5.8rem;
+  }
+}
+@media (min-width: 1200px) {
+  .carousel__text {
+    padding: 0 47rem 0 19rem;
+  }
+}
+.carousel__info {
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+}
+.carousel .button {
+  margin-top: 8.3rem;
+}
+@media (min-width: 768px) {
+  .carousel .button {
+    margin-top: 4.1rem;
+  }
+}
+.carousel__navigation {
+  position: absolute;
+  bottom: 0;
+  left: -8rem;
+  display: none;
+}
+@media (min-width: 768px) {
+  .carousel__navigation {
+    display: flex;
+  }
+}
+.carousel__navigation-item {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  color: #7d828f;
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+}
+.carousel__navigation-item:hover {
+  cursor: pointer;
+}
+.carousel__navigation-item--selected {
+  background: #1b1d23;
+  color: white;
 }/*# sourceMappingURL=main.css.map */
