--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -157,3 +157,97 @@
     }
   }
 }
+
+.carousel {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  color: white;
+  @include size(tablet) {
+    width: 57.3rem;
+    margin-bottom: 18.9rem;
+  }
+  @include size(desktop) {
+    width: 111rem;
+  }
+  &__item {
+    font-weight: bold;
+    font-size: 2em;
+    display: none;
+    &--selected {
+      display: block;
+    }
+  }
+  &__image img {
+    width: 100%;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    mix-blend-mode: normal;
+    opacity: 0.35;
+  }
+  &__text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 0 3.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    h2 {
+      margin-bottom: 1.1rem;
+    }
+    @include size(tablet) {
+      padding: 0 5.8rem;
+    }
+    @include size(desktop) {
+      padding: 0 47rem 0 19rem;
+    }
+  }
+  &__info {
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+  }
+  .button {
+    margin-top: 8.3rem;
+    @include size(tablet) {
+      margin-top: 4.1rem;
+    }
+  }
+  &__navigation {
+    position: absolute;
+    bottom: 0;
+    left: -8rem;
+    display: none;
+    @include size(tablet) {
+      display: flex;
+    }
+    &-item {
+      width: 8rem;
+      height: 8rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: white;
+      color: $color-medium-grey;
+      font-weight: 700;
+      font-size: 1.8rem;
+      line-height: 2.5rem;
+      &:hover {
+        cursor: pointer;
+      }
+      &--selected {
+        background: $color-very-dark-blue;
+        color: white;
+      }
+    }
+  }
+}
