--- a/scss/main.css
+++ b/scss/main.css
@@ -830,6 +830,134 @@ h4 {
   }
 }
 
+.contact__form {
+  display: flex;
+}
+@media (min-width: 1200px) {
+  .contact__form {
+    flex-direction: row;
+  }
+}
+.contact__form h3 {
+  max-width: 25rem;
+  margin-bottom: 4.3rem;
+}
+@media (min-width: 768px) {
+  .contact__form h3 {
+    max-width: 100%;
+    margin-bottom: 6rem;
+  }
+}
+@media (min-width: 1200px) {
+  .contact__form h3 {
+    width: 38rem;
+  }
+}
+.contact__form .form {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  margin-bottom: 7.2rem;
+}
+@media (min-width: 768px) {
+  .contact__form .form {
+    margin-bottom: 20rem;
+  }
+}
+@media (min-width: 1200px) {
+  .contact__form .form {
+    margin-bottom: 16rem;
+  }
+}
+.contact__form .form__item input {
+  margin-bottom: 4.3rem;
+  border: none;
+  border-bottom: 1px solid #1b1d23;
+  width: 100%;
+  padding-bottom: 2.2rem;
+  padding-left: 3.5rem;
+  height: 4.4rem;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+}
+.contact__form .form__item input::-moz-placeholder {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  font-family: "League Spartan", sans-serif;
+  color: #c8ccd8;
+}
+.contact__form .form__item input:-ms-input-placeholder {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  font-family: "League Spartan", sans-serif;
+  color: #c8ccd8;
+}
+.contact__form .form__item input::placeholder {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  font-family: "League Spartan", sans-serif;
+  color: #c8ccd8;
+}
+.contact__form .form__item input:focus {
+  outline: none;
+}
+.contact__form .form__item textarea {
+  width: 100%;
+  border: none;
+  resize: none;
+  border-bottom: 1px solid #1b1d23;
+  padding-bottom: 2rem;
+  padding-left: 3.5rem;
+  font-family: "League Spartan", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  display: block;
+}
+.contact__form .form__item textarea::-moz-placeholder {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  font-family: "League Spartan", sans-serif;
+  color: #c8ccd8;
+}
+.contact__form .form__item textarea:-ms-input-placeholder {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  font-family: "League Spartan", sans-serif;
+  color: #c8ccd8;
+}
+.contact__form .form__item textarea::placeholder {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.3125px;
+  font-family: "League Spartan", sans-serif;
+  color: #c8ccd8;
+}
+.contact__form .form__item textarea:focus {
+  outline: none;
+}
+.contact__form button {
+  width: 8rem;
+  height: 8rem;
+  margin-left: auto;
+  border: none;
+  background-color: #1b1d23;
+}
+
 .featured {
   margin-top: 7.3rem;
 }
