--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -72,3 +72,91 @@
     width: 111rem;
   }
 }
+
+.contact__form {
+  display: flex;
+  @include size(desktop) {
+    flex-direction: row;
+  }
+  h3 {
+    max-width: 25rem;
+    margin-bottom: 4.3rem;
+    @include size(tablet) {
+      max-width: 100%;
+      margin-bottom: 6rem;
+    }
+    @include size(desktop) {
+      width: 38rem;
+    }
+  }
+  .form {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-bottom: 7.2rem;
+    @include size(tablet) {
+      margin-bottom: 20rem;
+    }
+    @include size(desktop) {
+      margin-bottom: 16rem;
+    }
+  }
+  .form__item {
+    input {
+      margin-bottom: 4.3rem;
+      border: none;
+      border-bottom: 1px solid $color-very-dark-blue;
+      width: 100%;
+      padding-bottom: 2.2rem;
+      padding-left: 3.5rem;
+      height: 4.4rem;
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 2.2rem;
+      letter-spacing: -0.3125px;
+      &::placeholder {
+        font-weight: 700;
+        font-size: 2rem;
+        line-height: 2.2rem;
+        letter-spacing: -0.3125px;
+        font-family: $font-family;
+        color: $color-light-grey;
+      }
+      &:focus {
+        outline: none;
+      }
+    }
+    textarea {
+      width: 100%;
+      border: none;
+      resize: none;
+      border-bottom: 1px solid $color-very-dark-blue;
+      padding-bottom: 2rem;
+      padding-left: 3.5rem;
+      font-family: $font-family;
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 2.2rem;
+      letter-spacing: -0.3125px;
+      display: block;
+      &::placeholder {
+        font-weight: 700;
+        font-size: 2rem;
+        line-height: 2.2rem;
+        letter-spacing: -0.3125px;
+        font-family: $font-family;
+        color: $color-light-grey;
+      }
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+  button {
+    width: 8rem;
+    height: 8rem;
+    margin-left: auto;
+    border: none;
+    background-color: $color-very-dark-blue;
+  }
+}
